# HCLang

./: .travis.yml  CMakeLists.txt  CNAME  LICENSE.txt  README.md  ROADMAP.md  _config.yml  index.md  roadmap.md
_includes/: head.html  header.html
_sass/: _base.scss  _layout.scss  common.scss
about/: index.md
css/: laptop.scss  main.scss  normal.scss  palm.scss
doc/: TODO.md
examples/basic/: 01-helloworld.hcl  02-expressions.hcl  03-types.hcl  04-control-structures.hcl  05-subroutines.hcl  07-variables.hcl
examples/concurrency/: 01-helloworld.hcl  02-state.hcl  03-async-procedures.hcl  04-slotcallback.hcl  05-slotreturn.hcl  09-io.hcl
examples/current/: 01-helloworld.hcl  02-state.hcl  02-types.hcl  03-expressions.hcl  03-functions.hcl  04-state.hcl  04-types-easy.hcl  05-asyncprocedures.hcl  06-slotcallback.hcl  07-variables.hcl  09-io.hcl
examples/future/: 03-parallelprocedures.hcl  04-types-easy2.hcl  extra-htmltable-to-csv-split.hcl
examples/v0.1/: 03-functions.hcl
examples/v0.2/: 01-asyncprocedures.hcl  02-slotcallback.hcl  02-state-extra.hcl  04-types.hcl  04-variables.hcl  05-slotreturn.hcl
examples/v0.999-future/: 04-types.hcl  extra-htmltable-to-csv.hcl
roadmap/: detail-v0.2.md
src/: .gitignore  CMakeLists.txt  astdebug_main.cpp  base.cpp  base.h  base.hpp  cmdoptions.gperf  cmdoptions.h  lexdebug_main.cpp  lexer.cpp  lexer.h  main.cpp  mtexecutor.cpp  pardebug_main.cpp  parser.cpp  parser.h  printer.cpp  printer.h  stexecutor.cpp
src/ast/: array.cpp  array.h  ast.cpp  ast.h  ast.print.cpp  base.h  expr_binop.cpp  expr_binop.h  expr_call.cpp  expr_call.h  expr_cond.cpp  expr_cond.h  match_ast.h  procedure.cpp  procedure.h  slot.cpp  slot.h  stmt_expr.cpp  stmt_expr.h  stmt_for.cpp  stmt_for.h  stmt_let.cpp  stmt_let.h  stmt_return.cpp  stmt_return.h  stmt_send.cpp  stmt_send.h  stmt_var.cpp  stmt_var.h  system.cpp  system.h  tuple.cpp  tuple.h  union.cpp  union.h
src/ast/declarations/: function.cpp  function.h  procedure.cpp  procedure.h  slot.cpp  slot.h  system.cpp  system.h
src/ast/expressions/: binop.cpp  binop.h  call.cpp  call.h  cond.cpp  cond.h  getchild.cpp  getchild.h
src/ast/statements/: expr.cpp  expr.h  for.cpp  for.h  let.cpp  let.h  return.cpp  return.h  send.cpp  send.h  var.cpp  var.h
src/ast/types/: array.cpp  array.h  string.cpp  string.h  tuple.cpp  tuple.h  union.cpp  union.h
src/corelib/: async_io.cpp  async_io.h  stdout.cpp  stdout.h
src/csamples/: hellosystem.cpp  hellosystem.h
src/frontend/: lexer.cpp  lexer.h  parser.cpp
